refactor: json snake case
