# docs/swagger.json
@@ -143,7 +143,7 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "Статус 'healthy'",
+                        "description": "Статус 'healthy' или 'unhealthy'",
                         "schema": {
                             "$ref": "#/definitions/models.CheckConnectionResponse"
                         }
@@ -154,8 +154,8 @@
                             "$ref": "#/definitions/models.ErrorResponse"
                         }
                     },
-                    "503": {
-                        "description": "Статус 'unhealthy'",
+                    "404": {
+                        "description": "Подключение не найдено",
                         "schema": {
                             "$ref": "#/definitions/models.ErrorResponse"
                         }
@@ -260,25 +260,25 @@
         "models.CheckConnectionResponse": {
             "type": "object",
             "properties": {
-                "Status": {
+                "connection_info": {
+                    "$ref": "#/definitions/models.ConnectionInfo"
+                },
+                "status": {
                     "type": "string",
                     "example": "healthy"
-                },
-                "connectionInfo": {
-                    "$ref": "#/definitions/models.ConnectionInfo"
                 }
             }
         },
         "models.ConnectionConfig": {
             "type": "object",
             "properties": {
-                "EndpointURL": {
+                "endpoint_url": {
                     "type": "string"
                 },
-                "Manufacturer": {
+                "manufacturer": {
                     "type": "string"
                 },
-                "Model": {
+                "model": {
                     "type": "string"
                 }
             }
@@ -286,22 +286,22 @@
         "models.ConnectionInfo": {
             "type": "object",
             "properties": {
-                "Config": {
+                "config": {
                     "$ref": "#/definitions/models.ConnectionConfig"
                 },
-                "CreatedAt": {
+                "created_at": {
                     "type": "string"
                 },
-                "IsHealthy": {
+                "is_healthy": {
                     "type": "boolean"
                 },
-                "LastUsed": {
+                "last_used": {
                     "type": "string"
                 },
-                "SessionID": {
+                "session_id": {
                     "type": "string"
                 },
-                "UseCount": {
+                "use_count": {
                     "type": "integer"
                 }
             }
@@ -309,17 +309,17 @@
         "models.ConnectionRequest": {
             "type": "object",
             "required": [
-                "EndpointURL",
-                "Model"
+                "endpoint_url",
+                "model"
             ],
             "properties": {
-                "EndpointURL": {
+                "endpoint_url": {
                     "type": "string"
                 },
-                "Manufacturer": {
+                "manufacturer": {
                     "type": "string"
                 },
-                "Model": {
+                "model": {
                     "type": "string"
                 }
             }
@@ -327,22 +327,18 @@
         "models.CreateConnectionResponse": {
             "type": "object",
             "properties": {
-                "Status": {
+                "connection_info": {
+                    "$ref": "#/definitions/models.ConnectionInfo"
+                },
+                "status": {
                     "type": "string",
                     "example": "ok"
-                },
-                "connectionInfo": {
-                    "$ref": "#/definitions/models.ConnectionInfo"
                 }
             }
         },
         "models.ErrorResponse": {
             "type": "object",
             "properties": {
-                "Status": {
-                    "type": "string",
-                    "example": "error"
-                },
                 "error": {
                     "type": "object",
                     "properties": {
@@ -355,23 +351,27 @@
                             "example": "Подключение не найдено"
                         }
                     }
+                },
+                "status": {
+                    "type": "string",
+                    "example": "error"
                 }
             }
         },
         "models.GetConnectionsResponse": {
             "type": "object",
             "properties": {
-                "Connections": {
+                "connections": {
                     "type": "array",
                     "items": {
                         "$ref": "#/definitions/models.ConnectionInfo"
                     }
                 },
-                "PoolSize": {
+                "pool_size": {
                     "type": "integer",
                     "example": 2
                 },
-                "Status": {
+                "status": {
                     "type": "string",
                     "example": "ok"
                 }
@@ -380,11 +380,11 @@
         "models.MessageResponse": {
             "type": "object",
             "properties": {
-                "Message": {
+                "message": {
                     "type": "string",
                     "example": "Polling started successfully"
                 },
-                "Status": {
+                "status": {
                     "type": "string",
                     "example": "ok"
                 }
@@ -393,15 +393,15 @@
         "models.PollingRequest": {
             "type": "object",
             "required": [
-                "Interval",
-                "SessionID"
+                "interval",
+                "session_id"
             ],
             "properties": {
-                "Interval": {
+                "interval": {
                     "description": "в миллисекундах",
                     "type": "integer"
                 },
-                "SessionID": {
+                "session_id": {
                     "type": "string"
                 }
             }
@@ -409,10 +409,10 @@
         "models.SessionRequest": {
             "type": "object",
             "required": [
-                "SessionID"
+                "session_id"
             ],
             "properties": {
-                "SessionID": {
+                "session_id": {
                     "type": "string"
                 }
             }
